--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
+
+	<properties>
+		<maven.compiler.release>17</maven.compiler.release>
+	</properties>
+
 	<dependencies>
 
 		<!-- MySQL Connector -->
@@ -18,13 +23,13 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<!-- Jakarta Servlet API (Tomcat 10.1 compatible) -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 			<version>6.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-
 
 	</dependencies>
 
